    * [OPENJPA-1580] - Using firstResult and maxResults in queries is not working properly
    * [OPENJPA-1581] - getCache() should throw IllegalStateException if the EMF has been closed. 
    * [OPENJPA-1583] - Update by query fails on entities using Timestamp as Version field
    * [OPENJPA-1588] - modify 925451 revision for setProperty processing for enums

Improvement
-----------
    * [OPENJPA-979] - Define process for contributions 
    * [OPENJPA-1118] - code changes towards broader use of JDK5 features
    * [OPENJPA-1443] - Turn on some additional DataCache and PCData testcases
    * [OPENJPA-1492] - Change access on ReverseMappingTool#getAnnotationsForMeta(Object) from private to public
    * [OPENJPA-1498] - Update localizer.properties files for easier translation
    * [OPENJPA-1530] - MySQL storage engine support
    * [OPENJPA-1531] - The DataCache EvictionSchedule property should accept other time formats.
    * [OPENJPA-1539] - DataCacheManager should cache whether or not a given type is cacheable or not.
    * [OPENJPA-1548] - Miscellaneous ClassMetaData performance improvements
    * [OPENJPA-1549] - StateManagerImpl performance improvement
    * [OPENJPA-1551] - Allow connectionFactoryName to be specified when creating an EntityManager
    * [OPENJPA-1552] - Enable EntityManager to perform property QueryImpl creation by its subclass
    * [OPENJPA-1561] - Cache Criteria Query
    * [OPENJPA-1566] - Provide all the cached prepared query strings in QueryStatistics
    * [OPENJPA-1585] - Additional trace to relate SQL pushdowns with entity action or JPQL query
    * [OPENJPA-1591] - Refactor various parts to allow for greater extensibility

Test
----
    * [OPENJPA-1411] - Include DayTrader test case to OpenJpa
    * [OPENJPA-1586] - Additional test single valued path expression which references qualified path in JPQL


Included Changes in OpenJPA 2.0.0 Beta 2
----------------------------------------

Bug
---