@@ -326,6 +326,8 @@ in each release of OpenJPA.</P>
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1588'>OPENJPA-1588</a>] -         modify 925451 revision for setProperty processing for enums
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1596'>OPENJPA-1596</a>] -         Index name too long for DB2 zOS
+</li>
 </ul>
     
 <h4>Improvement</h4>
